refactor: Rename project to Cây thông Noel
Update package.json and metadata.json to reflect the new project name from "cinematic-christmas-tree" to "cây-thông-noel". This aligns the project name with its new branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cinematic-christmas-tree",
+  "name": "cây-thông-noel",
   "private": true,
   "version": "0.0.0",
   "type": "module",
