--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/postprocessing": "^3.0.4",
     "uuid": "^13.0.0",
-    "@react-spring/three": "^10.0.3"
+    "@react-spring/three": "^10.0.3",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
