--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
-  "name": "cây-thông-noel",
+  "name": "cinematic-christmas-tree",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "three": "^0.182.0",
-    "framer-motion": "^12.23.25",
-    "@react-three/fiber": "^9.4.2",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/postprocessing": "^3.0.4",
-    "uuid": "^13.0.0",
-    "@react-spring/three": "^10.0.3",
-    "firebase": "^12.6.0",
-    "@google/generative-ai": "latest",
-    "@google/genai": "^1.33.0",
-    "firebase-functions": "^7.0.2"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "three": "0.160.0",
+    "@react-three/fiber": "8.16.8",
+    "@react-three/drei": "9.108.3",
+    "@react-three/postprocessing": "2.16.2",
+    "framer-motion": "10.16.4",
+    "uuid": "9.0.1",
+    "@react-spring/three": "9.7.3",
+    "firebase": "10.7.1",
+    "zustand": "4.5.0",
+    "@google/genai": "0.1.1"
   },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
